# spiceglue

./: .gitignore  configure.ac
include/spice-gtk/: spice-util-priv.h
src/: Makefile.am  glue-clipboard-macos.c  glue-clipboard-win32.c  glue-clipboard.c  glue-clipboard.h  glue-connection.c  glue-connection.h  glue-printing.c  glue-service.c  glue-service.h  glue-spice-widget-priv.h  glue-spice-widget.c  glue-spice-widget.h  glue-spicy.c  glue-spicy.h  mono-glue-types.h  spice-grabsequence.h  usb-device-widget.c  usb-device-widget.h  usb-glue.c  usb-glue.h  virt-viewer-file.c  virt-viewer-util.c
